Fix up queued print job list interface button overflow in (narrow) sidepanes

--- a/src/Mapbender/PrintBundle/Resources/public/element/printclient.scss
+++ b/src/Mapbender/PrintBundle/Resources/public/element/printclient.scss
@@ -10,11 +10,15 @@
     table {
       td.interface {
         text-align: right;
-        .btn, .loading {
-          margin-right: 0.25em;
+        white-space: nowrap;
+        .btn-group {
+          vertical-align: inherit;
+          .btn {
+            float: none;
+          }
         }
-        :last-child {
-          margin-right: 0;
+        .loading {
+          margin-right: 0.25em;
         }
       }
     }
